@@ -43,6 +43,7 @@
   * Fixed a bug in email validator
   * Fixed some stuff in M.SelectionListView and extended support for boolean/numerical values when using content binding
   * Finalized v0.7
+  * Refactored getLocation() to work with callbacks in all cases instead of returning boolean value
 
 ** Version 0.6 - Date 21.07.2011 **
 
